--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.container {
+    display: flex;
+    align-items: center;
+    margin-top: 2rem;
+    flex-direction: column;
+}
+
+
 body {
     font-family: Arial, sans-serif;
 }
@@ -5,6 +13,10 @@ body {
 h1 {
     text-align: center;
     margin-top: 50px;
+}
+
+p {
+    text-align: center;
 }
 
 #guess-input {
